@startuml
hide methods
left to right direction


class Plataforma {
  -String designacao
}

class CompetenciaTecnica {
  -String codigo
  -String descBreve
  -String descDetalhada
 
}

class AreaAtividade {
  -String codigo
  -String descBreve
  -String descDetalhada
 
}

Plataforma "1" -- "*" CompetenciaTecnica : possui >
CompetenciaTecnica "1" -- "*" AreaAtividade: referente a >
@enduml
